# Neural_Network_Framework

./: CMakeLists.txt  Layer.cpp  Layer.h  Network.cpp  Network.h  Output.cpp  Output.h  README.md  main.cpp
weignts/: _weights50*50.txt  _weights70.txt
